Adding the new class rocket to the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,11 @@ cmake_minimum_required(VERSION 2.4)
 
 project(BRL-test)
 
-add_executable(rocket main.cpp)
+set(project_sources
+    main.cpp
+    rocket.cpp)
+
+add_executable(rocket ${project_sources})
 
 set_property(TARGET rocket PROPERTY CXX_STANDARD 17)
+
